force-app/main/default/objects/SBQQ__Quote__c/fields/Account_School_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_School_Type__c</fullName>
    <description>Use for reports</description>
    <formula>IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Indskoling&quot;),&quot;Indskoling;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Mellemtrin&quot;),&quot;Mellemtrin;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Udskoling&quot;),&quot;Udskoling;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;10. klasse mv&quot;),&quot;10. klasse mv;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Andet&quot;),&quot;Andet;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Efterskole	&quot;),&quot;Efterskole	;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Ungdomsskole&quot;),&quot;Ungdomsskole;&quot;,null)&amp;
IF(INCLUDES(SBQQ__Account__r.School_Type__c,&quot;Folkebibliotek&quot;),&quot;Folkebibliotek;&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use for reports</inlineHelpText>
    <label>Account School Type</label>
    <type>Text</type>
</CustomField>