force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Additional_Discount__c</fullName>
    <description>- Formula field used in the Frame &quot;Reasons for Approval&quot; (Related Records Lightning Components)
- Used only to show Sales when the criteria is met, that it&apos;s a reason for approval.</description>
    <formula>IF  (addl_disc_amount_percent__c  &gt; 0.50, &quot;05. is above 50%&quot;,
IF  (addl_disc_amount_percent__c  &gt; 0.30, &quot;04. is above 30%&quot;,
IF  (addl_disc_amount_percent__c  &gt; 0.10, &quot;03. is above 10%&quot;,
IF (addl_disc_amount_percent__c  &gt; 0, &quot;02. Less than 10%&quot;,&quot;01. No discount&quot;
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Discount:</label>
    <type>Text</type>
</CustomField>