force-app/main/default/objects/SBQQ__Quote__c/fields/addl_disc_amount_percent__c.field-meta.xml
<CustomField>
    <fullName>addl_disc_amount_percent__c</fullName>
    <description>- Formula field that reflects the Additional Discount that Sales manually gave by Quote Line.
- It does NOT includes the Default discount given thanks to Contract Terms Length.
- The field is used in: 
     * Page Component to show the Reasons Approval Frame or not 
     * Process Builder &quot;Approval Process Needed update Yes or No&quot;</description>
    <formula>SBQQ__AdditionalDiscountAmount__c /  SBQQ__RegularAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the Additional Discount percent based on the total Quote Additional Discount Percentage</inlineHelpText>
    <label>Addl. Disc. %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>