force-app/main/default/objects/SBQQ__Quote__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <description>- Field used to define if Yes or No an approval is needed.
- updated by the Process Builder &quot;Approval Process Needed update Yes or No&quot;.
- used in the Validation Rule &quot;Quote_approved_before_Quot_or_Order_Sent&quot;</description>
    <label>Approval needed ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>