force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Needed__c</fullName>
    <description>Class prices &amp; Discount% greater than 10?</description>
    <formula>AND( SBQQ__PricebookId__c = &quot;01s3W000000gESuQAM&quot;,
addl_disc_amount_percent__c &gt; 0.1,
CampaignId__c = &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Class prices &amp; Discount% greater than 10?</inlineHelpText>
    <label>Approval Needed</label>
    <type>Checkbox</type>
</CustomField>