force-app/main/default/objects/SBQQ__Quote__c/fields/Average_Subscription_Length__c.field-meta.xml
<CustomField>
    <fullName>Average_Subscription_Length__c</fullName>
    <formula>Count_Prorate_Multiplier__c / Count_lines_on_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Subscription Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>