force-app/main/default/objects/SBQQ__Quote__c/fields/Avg_unit_price_per_year__c.field-meta.xml
<CustomField>
    <fullName>Avg_unit_price_per_year__c</fullName>
    <inlineHelpText>Calculates the average price per student for this quote.</inlineHelpText>
    <label>Avg unit price per year</label>
    <summarizedField>SBQQ__QuoteLine__c.ACV_Unit__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>