force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (CPQ) (Bill To Account)</relationshipLabel>
    <relationshipName>Quotes_CPQ</relationshipName>
    <type>Lookup</type>
</CustomField>