force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Account_Check__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Check__c</fullName>
    <formula>SBQQ__Account__r.NAV_Bill_To_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Previous Bill-To Account NAV Id - Search in Salesforce for this record.</inlineHelpText>
    <label>Bill-To Account Check</label>
    <type>Text</type>
</CustomField>