force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Info_Missing__c.field-meta.xml
<CustomField>
    <fullName>Billing_Info_Missing__c</fullName>
    <formula>Bill_To_Account__r.Account_Billing_Info_Missing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Info Missing</label>
    <type>Checkbox</type>
</CustomField>