force-app/main/default/objects/SBQQ__Quote__c/fields/Bonnier_BillToAccountMunicipalityName__c.field-meta.xml
<CustomField>
    <fullName>Bonnier_BillToAccountMunicipalityName__c</fullName>
    <description>Field created to be able to see the Bill To Account information on the Quote Templates. 
Done this way because HTML can&apos;t connect Quote and Bill to Account info.</description>
    <formula>Bill_To_Account__r.Municipality__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account Municipality Name</label>
    <type>Text</type>
</CustomField>