force-app/main/default/objects/SBQQ__Quote__c/fields/Calculate__c.field-meta.xml
<CustomField>
    <fullName>Calculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Mass-Calculate Quotes</description>
    <inlineHelpText>Used to Mass-Calculate Quotes</inlineHelpText>
    <label>Calculate</label>
    <type>Checkbox</type>
</CustomField>