force-app/main/default/objects/SBQQ__Quote__c/fields/Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>Calculated_On__c</fullName>
    <description>Used in Process Builder to ensure a Quote is Calculated when an opportunity is edited.</description>
    <label>Calculated On</label>
    <type>DateTime</type>
</CustomField>