force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Clio_Auto_Renewal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox created to give users possibility to highlight if a DK Order is not going to be Auto Renewed. Note: as for the process in Salesforce a Renewal Opportunity is created either way.</description>
    <label>Auto Renewal</label>
    <type>Checkbox</type>
</CustomField>