force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Billtoaccountschoolid__c.field-meta.xml
<CustomField>
    <fullName>Clio_Billtoaccountschoolid__c</fullName>
    <description>NOT IN USE - Field created to be able to see the Bill To Account information on the Quote Templates. 
Done this way because HTML can&apos;t connect Quote and Bill to Account info.</description>
    <formula>Bill_To_Account__r.Clio_School_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill to Account School ID</label>
    <type>Text</type>
</CustomField>