force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_billtoorg__c.field-meta.xml
<CustomField>
    <fullName>Clio_billtoorg__c</fullName>
    <description>Field created to be able to see the Bill To Account information on the Quote Templates. 
Done this way because HTML can&apos;t connect Quote and Bill to Account info.</description>
    <formula>Bill_To_Account__r.Clio_OrgNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account Org Number</label>
    <type>Text</type>
</CustomField>