force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Commentistrue__c.field-meta.xml
<CustomField>
    <fullName>Clio_Commentistrue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to have the Comments field as mandatory in the Quote Template. 
It is Checked or not thanks to 2 workflow:  Comment is true, Comment is false</description>
    <label>Comment is true</label>
    <type>Checkbox</type>
</CustomField>