force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Comments__c.field-meta.xml
<CustomField>
    <fullName>Clio_Comments__c</fullName>
    <description>Field created instead of &quot;notes&quot;, to be able to have a formula field no hide the Kommentar section if empty on quote templates</description>
    <inlineHelpText>Add a comment if you want to add a short text in Quote or Order Confirmation</inlineHelpText>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>