force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Custom_record_type_is_true__c.field-meta.xml
<CustomField>
    <fullName>Clio_Custom_record_type_is_true__c</fullName>
    <description>Used for conditional printing End &amp; Start Dates in the Quote templates.</description>
    <formula>IF(RecordType.Name = &quot;Custom Quote&quot;,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom record type is true</label>
    <type>Checkbox</type>
</CustomField>