force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Discount_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Clio_Discount_per_Year__c</fullName>
    <description>Discount per year on the global quote</description>
    <label>Total Customer ACV Discount</label>
    <summarizedField>SBQQ__QuoteLine__c.Customer_ACV_Discount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>