force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_EndDateFormula__c.field-meta.xml
<CustomField>
    <fullName>Clio_EndDateFormula__c</fullName>
    <description>Formula field created  to calculate the End Date thanks to the Start Date + Subscriptions terms</description>
    <formula>DATE( 
YEAR( SBQQ__StartDate__c ) 
+FLOOR((MONTH(SBQQ__StartDate__c)+ SBQQ__SubscriptionTerm__c )/12)+ 
IF( 
AND(MONTH(SBQQ__StartDate__c)=12, 
SBQQ__SubscriptionTerm__c&gt;=12),-1,0), 
IF(MOD(MONTH(SBQQ__StartDate__c)+SBQQ__SubscriptionTerm__c,12)=0,12, 
MOD(MONTH(SBQQ__StartDate__c)+SBQQ__SubscriptionTerm__c,12)), 
MIN(DAY(SBQQ__StartDate__c), 
CASE( 
MAX(MOD(MONTH(SBQQ__StartDate__c)+SBQQ__SubscriptionTerm__c,12),1), 
9,30, 
4,30, 
6,30, 
11,30, 
2,28, 
31 
) 
) 
)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically calculated = Start Date + Subscription Terms</inlineHelpText>
    <label>End Date Formula</label>
    <type>Date</type>
</CustomField>