force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_First_invoice_date__c.field-meta.xml
<CustomField>
    <fullName>Clio_First_invoice_date__c</fullName>
    <description>This field indicates the first day the invoice is sent / start for the customer.</description>
    <label>First invoice date</label>
    <type>Date</type>
</CustomField>