force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_GLNnummeristrue__c.field-meta.xml
<CustomField>
    <fullName>Clio_GLNnummeristrue__c</fullName>
    <description>Field created to have the Conditional Printing available in the Content Section // Quote template</description>
    <formula>IF( ISBLANK(  Bill_To_Account__r.Clio_GLN_Number__c  ) , FALSE , TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GLN-nummer is true</label>
    <type>Checkbox</type>
</CustomField>