force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Invoicestartdatetrue__c.field-meta.xml
<CustomField>
    <fullName>Clio_Invoicestartdatetrue__c</fullName>
    <description>ield created to have the Conditional Printing available in the Content Section // Quote template</description>
    <formula>IF( ISBLANK(  Clio_First_invoice_date__c  ) , FALSE , TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Start date is true</label>
    <type>Checkbox</type>
</CustomField>