force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_List_Price_per_Year2__c.field-meta.xml
<CustomField>
    <fullName>Clio_List_Price_per_Year2__c</fullName>
    <description>Roll up of Field List ACV on Quote Line</description>
    <inlineHelpText>Roll up of Field List ACV on Quote Line</inlineHelpText>
    <label>Total List ACV</label>
    <summarizedField>SBQQ__QuoteLine__c.List_ACV__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>