force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_renewed_contract__c.field-meta.xml
<CustomField>
    <fullName>Clio_renewed_contract__c</fullName>
    <description>This contract generated this opportunity. 
This field is only used for a Workflow to update End Date on the Quote level.</description>
    <formula>SBQQ__Opportunity2__r.SBQQ__RenewedContract__c</formula>
    <inlineHelpText>This contract generated this opportunity. 
This field is only used for a Workflow to update End Date on the Quote level.</inlineHelpText>
    <label>Oppy renewed contract</label>
    <type>Text</type>
</CustomField>