force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Standard_Record_Type_is_true__c.field-meta.xml
<CustomField>
    <fullName>Clio_Standard_Record_Type_is_true__c</fullName>
    <description>Used to condition print field - to NOT print start and end date on a standard quote level.</description>
    <formula>IF(RecordType.Name = &quot;Standard Quote&quot;,true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Record Type is true</label>
    <type>Checkbox</type>
</CustomField>