force-app/main/default/objects/SBQQ__Quote__c/fields/Clio_Today_date__c.field-meta.xml
<CustomField>
    <fullName>Clio_Today_date__c</fullName>
    <description>Field formula with Today&apos;s date to be able to have it on the Quotes / Orders templates pdf.</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today_date</label>
    <type>Date</type>
</CustomField>