force-app/main/default/objects/SBQQ__Quote__c/fields/Close_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Won_Date__c</fullName>
    <description>Used to trigger a calculation when the quote is set to Closed Won. Process Builder on Opportunity.</description>
    <label>Close Won Date</label>
    <type>Date</type>
</CustomField>