force-app/main/default/objects/SBQQ__Quote__c/fields/Count_lines_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Count_lines_on_Quote__c</fullName>
    <label>Count lines on Quote</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Bundled__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>