force-app/main/default/objects/SBQQ__Quote__c/fields/Count_Prorate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Count_Prorate_Multiplier__c</fullName>
    <label>Count Prorate Multiplier</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__ProrateMultiplier__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Bundled__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>