force-app/main/default/objects/SBQQ__Quote__c/fields/Count_Renewal_Product__c.field-meta.xml
<CustomField>
    <fullName>Count_Renewal_Product__c</fullName>
    <description>Imported from demandtools</description>
    <label>Count Renewal Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>