force-app/main/default/objects/SBQQ__Quote__c/fields/Different_Payer_assigned_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Different_Payer_assigned_to_Account__c</fullName>
    <description>Related field, if Sell-To account has been hardcoded with a different Bill-To account on the Account page.</description>
    <formula>Bill_To_Account__r.Is_Bill_To_Account_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks if the account has been assigned a different Bill-To account.</inlineHelpText>
    <label>Different Payer assigned to Account</label>
    <type>Checkbox</type>
</CustomField>