force-app/main/default/objects/SBQQ__Quote__c/fields/Discount_per_year_is_true__c.field-meta.xml
<CustomField>
    <fullName>Discount_per_year_is_true__c</fullName>
    <description>Field to display or not the field in the Quote Template when discount or not (only option under CPQ to have a check box to display conditional field)</description>
    <formula>IF( TEXT(Clio_Discount_per_Year__c ) == &apos;0&apos;, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount per year is true</label>
    <type>Checkbox</type>
</CustomField>