force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <description>Created to have the right Line Editor Column when currency is DKK or SEK</description>
    <formula>IF(ISPICKVAL(CurrencyIsoCode , &quot;DKK&quot;) , &quot;Denmark_Quote_Line_Editor&quot;, &quot;Sweden_Quote_Line_Editor&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EditLinesFieldSetName</label>
    <type>Text</type>
</CustomField>