force-app/main/default/objects/SBQQ__Quote__c/fields/Expiration_Date_is_True__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_is_True__c</fullName>
    <description>Created for Quote Template - Expiration Date</description>
    <formula>IF( ISBLANK( SBQQ__ExpirationDate__c ) , FALSE , TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date is True</label>
    <type>Checkbox</type>
</CustomField>