force-app/main/default/objects/SBQQ__Quote__c/fields/GLN_number__c.field-meta.xml
<CustomField>
    <fullName>GLN_number__c</fullName>
    <description>GLN-number from account</description>
    <formula>SBQQ__Account__r.Clio_GLN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>GLN-number from account</inlineHelpText>
    <label>GLN-number</label>
    <type>Text</type>
</CustomField>