force-app/main/default/objects/SBQQ__Quote__c/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <formula>text(SBQQ__Account__r.Clio_Institution_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institution Type</label>
    <type>Text</type>
</CustomField>