force-app/main/default/objects/SBQQ__Quote__c/fields/Invoice_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_1__c</fullName>
    <description>Field showing the invoice email address taken from the &quot;Bill to Account&quot;</description>
    <formula>IF( ISBLANK( Bill_To_Account__r.Clio_GLN_Number__c ) , Bill_To_Account__r.Invoice_Email_1__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Email 1</label>
    <type>Text</type>
</CustomField>