force-app/main/default/objects/SBQQ__Quote__c/fields/Invoice_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_2__c</fullName>
    <description>Field used to populate Invoice Email 2 from &quot;bill to account&quot;</description>
    <formula>IF( ISBLANK( Bill_To_Account__r.Clio_GLN_Number__c ) , Bill_To_Account__r.Invoice_Email_2__c, &quot;&quot;)</formula>
    <label>Invoice Email 2</label>
    <type>Text</type>
</CustomField>