force-app/main/default/objects/SBQQ__Quote__c/fields/Invoice_email_is_true__c.field-meta.xml
<CustomField>
    <fullName>Invoice_email_is_true__c</fullName>
    <formula>IF( ISBLANK(   Invoice_Email_1__c  ) , FALSE , TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice email is true</label>
    <type>Checkbox</type>
</CustomField>