force-app/main/default/objects/SBQQ__Quote__c/fields/Legal__c.field-meta.xml
<CustomField>
    <fullName>Legal__c</fullName>
    <description>Choose legal option, only for DK</description>
    <inlineHelpText>Choose legal option, only for DK</inlineHelpText>
    <label>Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spar 3 aftalen</fullName>
            </value>
            <value>
                <fullName>Ski aftalen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>