force-app/main/default/objects/SBQQ__Quote__c/fields/Legal_is_True__c.field-meta.xml
<CustomField>
    <fullName>Legal_is_True__c</fullName>
    <description>Used for conditionnary print field in Quote Template (for Denmark order only)</description>
    <formula>IF( TEXT( Legal__c ) == &apos;&apos;, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal is True</label>
    <type>Checkbox</type>
</CustomField>