force-app/main/default/objects/SBQQ__Quote__c/fields/List_Price_per_Year__c.field-meta.xml
<CustomField>
    <fullName>List_Price_per_Year__c</fullName>
    <description>This field is used for QUOTE TEMPLATE only to have the LIst PRice per year (before Discount, to show later ACV)</description>
    <formula>IF( SBQQ__SubscriptionTerm__c &lt; 12, SBQQ__ListAmount__c, (SBQQ__ListAmount__c / SBQQ__SubscriptionTerm__c ) *12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price per Year (to delete)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>