force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_Amount_on_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Amount_on_Quote_Line__c</fullName>
    <description>Finds the minimum amount on the quote lines.</description>
    <label>Minimum Amount on Quote Line</label>
    <summarizedField>SBQQ__QuoteLine__c.Partner_ACV__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>