force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_Discount_on_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Discount_on_Quote_Line__c</fullName>
    <inlineHelpText>Finds the minimum discount on the quote.</inlineHelpText>
    <label>Minimum Discount on Quote Line</label>
    <summarizedField>SBQQ__QuoteLine__c.Total_Discount_incl_Partner__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>