force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_QL_Discount_2__c.field-meta.xml
<CustomField>
    <fullName>Minimum_QL_Discount_2__c</fullName>
    <label>Minimum QL Discount (Amt)</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__AdditionalDiscountAmount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>