force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_QL_Discount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_QL_Discount__c</fullName>
    <description>Used in Product Rule and Validation Rule</description>
    <label>Minimum QL Discount %</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__Discount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>