force-app/main/default/objects/SBQQ__Quote__c/fields/Municipality_Order_Special__c.field-meta.xml
<CustomField>
    <fullName>Municipality_Order_Special__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>AM checks if this is a special municipality deal (i.e. there a central agreement, but the school places purchase + receives invoice as well)</inlineHelpText>
    <label>Municipality Order (Special)</label>
    <type>Checkbox</type>
</CustomField>