force-app/main/default/objects/SBQQ__Quote__c/fields/Net_Amount_without_currency__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_without_currency__c</fullName>
    <description>- Formula that reflect the Net Amount without the currency: field used in the &quot;approval Process&quot; definition to avoid Currency issues.
- Not used on any Layout, only for Approval Process criteria</description>
    <formula>SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount (without currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>