force-app/main/default/objects/SBQQ__Quote__c/fields/Option_to_Opt_Out2__c.field-meta.xml
<CustomField>
    <fullName>Option_to_Opt_Out2__c</fullName>
    <formula>NOT (ISNULL(Option_Expiration_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option to Opt Out</label>
    <type>Checkbox</type>
</CustomField>