force-app/main/default/objects/SBQQ__Quote__c/fields/Option_to_Opt_Out_del__c.field-meta.xml
<CustomField>
    <fullName>Option_to_Opt_Out_del__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not for Layout: if checked, opt out is possible (date fulfilled in Option Expiration Date)
- Used in the process Builder &quot;Option to Opt out Boolean&quot; to see in the frame &quot;reasons for approval&quot; (lightning component)</description>
    <label>Option to Opt Out to withdraw</label>
    <type>Checkbox</type>
</CustomField>