force-app/main/default/objects/SBQQ__Quote__c/fields/Org_Number__c.field-meta.xml
<CustomField>
    <fullName>Org_Number__c</fullName>
    <description>Org. Number from Account</description>
    <formula>SBQQ__Account__r.Clio_OrgNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Org. Number from Account</inlineHelpText>
    <label>CVR/EAN/Org. Number</label>
    <type>Text</type>
</CustomField>