force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms2__c</fullName>
    <formula>CASE(TEXT(SBQQ__PaymentTerms__c), 
&apos;Net 45&apos;, &apos;Net 45&apos;, 
&apos;Net 60&apos;, &apos;Net 60&apos;,
&apos;Net 90&apos;, &apos;Net 90&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms:</label>
    <type>Text</type>
</CustomField>